# android_external_libnfnetlink

./: .gitignore  Make_global.am  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure.ac  configure.in  libnfnetlink.c  libnfnetlink.h  libtool  mkinstalldirs
_conntrack/: Makefile.am  aclocal.m4  configure.in  mkinstalldirs
debian/: changelog  rules
include/: Makefile.am
include/libnfnetlink/: Makefile.am  libnfnetlink.h
src/: Makefile.am  iftable.c  libnfnetlink.c  rtnl.c  rtnl.h
utils/: Makefile.am  iftest.c
